--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "cart-express",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
+    "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,8 +13,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "pg": "^8.16.3"
   },
