--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
+    "paypal-rest-sdk": "^1.8.1",
     "pg": "^8.16.3"
   },
   "devDependencies": {
